--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,6 +10,9 @@
 // #ff595e - red salsa
 // #3D3D3D - onyx
 
+$primary_color: #f6f5de;
+$primary_font: "Montserrat", sans-serif;
+
 * {
   box-sizing: border-box;
 }
@@ -18,18 +21,24 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: $primary_font;
   &:before {
     content: "";
     content: "";
     width: 100%;
     height: 100vh;
-    background: #f5f5f5;
+    background-color: $primary_color;
+    color: #1e1014;
     position: fixed;
     left: 0;
     top: 0;
     z-index: -1;
   }
+}
+
+::selection {
+  background: #1e1014;
+  color: $primary_color;
 }
 
 a {
@@ -53,7 +62,38 @@ a {
   }
 }
 
-.post-card-wrapper:hover h1{
-  color: #DB2777;
+.post-card-wrapper:hover h1 {
+  color: #db2777;
   transition: 0.2s;
+}
+
+.post-card-wrapper:hover {
+  box-shadow: 5px 10px 0px rgb(0 0 0 / 5%);
+  transition: 0.2s;
+}
+
+.social-icon {
+  height: 40px;
+  width: 40px;
+}
+
+.search-icon {
+  height: 40px;
+  width: 40px;
+}
+
+.close-icon {
+  height: 25px;
+  width: 25px;
+  position: absolute;
+  top: 1.8em;
+  right: 1em;
+
+  @media screen and (min-width: 768px) {
+    top: 1em;
+  }
+}
+
+.search-input {
+  font-size: 1.2em;
 }
