--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
 
 // #D3D3D3; - light gray
 // #f5f5f5 - cultured
@@ -12,7 +12,7 @@
 
 $primary_color: #ede4da;
 $secondary_color: #db2777;
-$primary_font: "Montserrat", sans-serif;
+$primary_font: 'Montserrat', sans-serif;
 
 * {
   box-sizing: border-box;
@@ -24,8 +24,8 @@ body {
   margin: 0;
   font-family: $primary_font;
   &:before {
-    content: "";
-    content: "";
+    content: '';
+    content: '';
     width: 100%;
     height: 100vh;
     background-color: $primary_color;
@@ -62,9 +62,19 @@ a {
   transition: background-size 0.3s ease-in-out;
 
   &:hover,
-  &:focus {
+  &:focus,
+  &:active {
     background-size: 100% 3px;
   }
+}
+
+.active {
+  text-decoration: none;
+  background-image: linear-gradient($secondary_color, $secondary_color);
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  background-size: 100% 3px;
+  transition: background-size 0.3s ease-in-out;
 }
 
 .text-shadow {
@@ -112,6 +122,10 @@ a {
 
   @media screen and (min-width: 768px) {
     top: 1em;
+  }
+
+  &--spotlight {
+    top: 3.4em;
   }
 }
 
