--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -25,10 +25,6 @@ body {
   font-family: $primary_font;
   &:before {
     content: '';
-    content: '';
-    width: 100%;
-    height: 100vh;
-    background-color: $primary_color;
     color: #1e1014;
     position: fixed;
     left: 0;
@@ -66,6 +62,11 @@ a {
   &:active {
     background-size: 100% 3px;
   }
+}
+
+button[disabled] {
+  cursor: not-allowed;
+  pointer-events: all;
 }
 
 .active {
@@ -126,6 +127,7 @@ a {
 
   &--spotlight {
     top: 3.4em;
+    right: 3.4em;
   }
 }
 
