imp(): update next to v13 + change primary font family + adjust styling

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;700&display=swap');
 
 // #D3D3D3; - light gray
 // #f5f5f5 - cultured
@@ -12,7 +12,7 @@
 
 $primary_color: #ede4da;
 $secondary_color: #db2777;
-$primary_font: 'Montserrat', sans-serif;
+$primary_font: 'Inconsolata', sans-serif;
 
 * {
   box-sizing: border-box;
@@ -23,19 +23,12 @@ body {
   padding: 0;
   margin: 0;
   font-family: $primary_font;
-  &:before {
-    content: '';
-    color: #1e1014;
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: -1;
-  }
+  height: 100vh;
 }
 
 ::selection {
   background: #1e1014;
-  color: $primary_color;
+  color: $primary_font;
 }
 
 h1,
@@ -75,6 +68,10 @@ button[disabled] {
   background-position: bottom left;
   background-size: 100% 3px;
   transition: background-size 0.3s ease-in-out;
+}
+
+.site-title {
+  letter-spacing: 4px;
 }
 
 .text-shadow {
