--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -109,21 +109,17 @@ button[disabled] {
   width: 40px;
 }
 
+.search-icon.full-search {
+  position: relative;
+  top: 1.4em;
+}
+
 .close-icon {
-  height: 25px;
-  width: 25px;
+  height: 24px;
+  width: 24px;
   position: absolute;
-  top: 2em;
+  top: 3.4em;
   right: 1em;
-
-  @media screen and (min-width: 768px) {
-    top: 1em;
-  }
-
-  &--spotlight {
-    top: 3.4em;
-    right: 3.4em;
-  }
 }
 
 .search-input {
